@@ -1,5 +1,6 @@
 package springContents.service;
 
+import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.ResourceLoader;
@@ -10,36 +11,65 @@ import org.slf4j.LoggerFactory;
 import software.amazon.awssdk.auth.credentials.ProfileCredentialsProvider;
 import software.amazon.awssdk.regions.Region;
 import software.amazon.awssdk.services.sns.SnsClient;
-import software.amazon.awssdk.services.sns.model.PublishRequest;
-import software.amazon.awssdk.services.sns.model.PublishResponse;
-import software.amazon.awssdk.services.sns.model.SnsException;
+import software.amazon.awssdk.services.sns.model.*;
 
 import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Properties;
 
 @Service
 public class SNSService {
+
     private static final Logger logger = LoggerFactory.getLogger(SNSService.class);
+
     private final SnsClient snsClient;
-    private final String topicArn;
     private final Region region;
+
+    // Topic configuration
+    private final String adminTopicName;
+    private final String subscriberTopicName;
+    private final String configuredAdminTopicArn;
+
+    // Runtime-resolved ARNs
+    private String adminTopicArn;
+    private String subscriberTopicArn;
+
+    private final List<String> adminEmails;
 
     @Autowired
     public SNSService(ResourceLoader resourceLoader) throws IOException {
-        Properties credentials = new Properties();
-
+        Properties props = new Properties();
         Resource resource = resourceLoader.getResource("classpath:dbcredentials.properties");
-        credentials.load(resource.getInputStream());
+        props.load(resource.getInputStream());
 
-        this.topicArn = credentials.getProperty("sns.topic.arn", "");
-        String regionStr = credentials.getProperty("sns.region", "us-east-1");
-        this.region = Region.of(regionStr);
+        // Region
+        this.region = Region.of(props.getProperty("sns.region", "us-east-1"));
 
-        String profileName = credentials.getProperty("sns.aws.profile", "default");
-        // If not specified, fall back to S3 profile
-        if (profileName.equals("default") && credentials.getProperty("s3.aws.profile") != null) {
-            profileName = credentials.getProperty("s3.aws.profile");
+        // Topics
+        this.adminTopicName = props.getProperty(
+                "sns.admin.topic.name",
+                "shiurbank-admin-notifications"
+        );
+        this.subscriberTopicName = props.getProperty(
+                "sns.subscriber.topic.name",
+                "shiurbank-subscriber-notifications"
+        );
+        this.configuredAdminTopicArn = props.getProperty("sns.admin.topic.arn");
+
+        // Profile selection
+        String profileName = props.getProperty("sns.aws.profile");
+        if (profileName == null || profileName.isBlank()) {
+            profileName = props.getProperty("s3.aws.profile", "default");
+        }
+
+        // Admin emails
+        this.adminEmails = new ArrayList<>();
+        String emails = props.getProperty("sns.admin.emails", "");
+        for (String email : emails.split(",")) {
+            if (!email.trim().isEmpty()) {
+                adminEmails.add(email.trim());
+            }
         }
 
         this.snsClient = SnsClient.builder()
@@ -47,64 +77,144 @@ public class SNSService {
                 .credentialsProvider(ProfileCredentialsProvider.create(profileName))
                 .build();
 
-        logger.info("SNSService initialized with topic ARN: {} in region: {} using profile: {}",
-                topicArn, region, profileName);
+        logger.info(
+                "SNSService initialized (region={}, profile={}, adminEmails={})",
+                region, profileName, adminEmails.size()
+        );
     }
 
-    /**
-     * Send a notification to the SNS topic
-     * @param subject The subject of the message
-     * @param message The message body
-     */
-    public void publishNotification(String subject, String message) {
-        if (topicArn == null || topicArn.trim().isEmpty()) {
-            logger.warn("SNS topic ARN not configured, skipping notification");
+    @PostConstruct
+    public void initializeTopics() {
+        try {
+            // Admin topic: use ARN if explicitly configured
+            if (configuredAdminTopicArn != null && !configuredAdminTopicArn.isBlank()) {
+                this.adminTopicArn = configuredAdminTopicArn;
+                logger.info("Using configured admin topic ARN: {}", adminTopicArn);
+            } else {
+                this.adminTopicArn = createOrGetTopic(adminTopicName);
+            }
+
+            // Subscriber topic is always name-based
+            this.subscriberTopicArn = createOrGetTopic(subscriberTopicName);
+
+            // Subscribe admin emails
+            for (String email : adminEmails) {
+                subscribeEmail(adminTopicArn, email);
+            }
+
+        } catch (Exception e) {
+            logger.error("Failed to initialize SNS topics", e);
+        }
+    }
+
+    private String createOrGetTopic(String topicName) {
+        try {
+            CreateTopicResponse response = snsClient.createTopic(
+                    CreateTopicRequest.builder().name(topicName).build()
+            );
+            logger.info("SNS topic ready: {} ({})", topicName, response.topicArn());
+            return response.topicArn();
+        } catch (SnsException e) {
+            throw new RuntimeException("Unable to create/get SNS topic: " + topicName, e);
+        }
+    }
+
+    private void subscribeEmail(String topicArn, String email) {
+        try {
+            snsClient.subscribe(
+                    SubscribeRequest.builder()
+                            .topicArn(topicArn)
+                            .protocol("email")
+                            .endpoint(email)
+                            .build()
+            );
+            logger.info("Subscription request sent for {}", email);
+        } catch (SnsException e) {
+            logger.debug("Email {} may already be subscribed: {}", email, e.getMessage());
+        }
+    }
+
+    /* =======================
+       Publishing APIs
+       ======================= */
+
+    public void publishToAdminTopic(String subject, String message) {
+        publish(adminTopicArn, subject, message);
+    }
+
+    public void publishToSubscriberTopic(String subject, String message) {
+        publish(subscriberTopicArn, subject, message);
+    }
+
+    private void publish(String topicArn, String subject, String message) {
+        if (topicArn == null) {
+            logger.warn("SNS topic ARN is null, skipping publish");
             return;
         }
 
         try {
-            PublishRequest request = PublishRequest.builder()
-                    .topicArn(topicArn)
-                    .subject(subject)
-                    .message(message)
-                    .build();
-
-            PublishResponse response = snsClient.publish(request);
-            logger.info("SNS notification published successfully. MessageId: {}", response.messageId());
+            PublishResponse response = snsClient.publish(
+                    PublishRequest.builder()
+                            .topicArn(topicArn)
+                            .subject(subject)
+                            .message(message)
+                            .build()
+            );
+            logger.info("SNS message published: {}", response.messageId());
         } catch (SnsException e) {
-            logger.error("Error publishing SNS notification: {}", e.getMessage(), e);
-            throw new RuntimeException("Failed to publish SNS notification", e);
+            throw new RuntimeException("SNS publish failed", e);
         }
     }
 
-    /**
-     * Send a notification about a new series requiring verification
-     * @param seriesId The series ID
-     * @param seriesDescription The series description
-     * @param rebbiName The Rabbi's name
-     * @param topicName The topic name
-     * @param institutionName The institution name
-     * @param creatorUsername The username of the creator
-     */
-    public void notifyNewSeriesRequiringVerification(Long seriesId, String seriesDescription,
-                                                      String rebbiName, String topicName,
-                                                      String institutionName, String creatorUsername) {
+    /* =======================
+       Domain-specific helper
+       ======================= */
+
+    public void notifyNewSeriesRequiringVerification(
+            Long seriesId,
+            String seriesDescription,
+            String rebbiName,
+            String topicName,
+            String institutionName,
+            String creatorUsername
+    ) {
         String subject = "New Series Requires Verification - Series #" + seriesId;
-        String message = String.format(
-                """
-                        A new series has been created and requires verification:
-                        
-                        Series ID: %d
-                        Description: %s
-                        Rabbi: %s
-                        Topic: %s
-                        Institution: %s
-                        Created by: %s
-                        
-                        Please review and verify this series in the admin panel.""",
-            seriesId, seriesDescription, rebbiName, topicName, institutionName, creatorUsername
+        String message = String.format("""
+                A new series has been created and requires verification:
+
+                Series ID: %d
+                Description: %s
+                Rabbi: %s
+                Topic: %s
+                Institution: %s
+                Created by: %s
+
+                Please review this series in the admin panel.
+                """,
+                seriesId,
+                seriesDescription,
+                rebbiName,
+                topicName,
+                institutionName,
+                creatorUsername
         );
 
-        publishNotification(subject, message);
+        publishToAdminTopic(subject, message);
+    }
+
+    /* =======================
+       Accessors
+       ======================= */
+
+    public String getAdminTopicArn() {
+        return adminTopicArn;
+    }
+
+    public String getSubscriberTopicArn() {
+        return subscriberTopicArn;
+    }
+
+    public List<String> getAdminEmails() {
+        return new ArrayList<>(adminEmails);
     }
 }
